# MusicNBrain

./: .gitignore  LICENSE  README.md  Sophia_Design_and_Artifacts.md  Sophia_设计文档_中文版.md  musicnbrain-app.jsx
artifacts/: Sophia_设计文档_中文版_v1.md  前端简化改动记录_v1.md
chat-app/: README.md  start_app.sh
chat-app/backend/: agent.py  main.py  mcp_server.py  pyproject.toml
chat-app/frontend/: App.tsx  index.html  package-lock.json  package.json  vite.config.ts
chat-app/frontend/components/: ChatInterface.tsx
docs/: Sophia_Design_and_Artifacts.md  frontend-simplification-changelog.md  前端简化改动记录.md
musicnbrain/: package-lock.json  package.json
musicnbrain/app/: globals.css  layout.tsx  page.tsx
musicnbrain/app/student/schedule/: page.tsx
musicnbrain/app/teacher/concert/[id]/: page.tsx
musicnbrain/app/teacher/concert/[id]/program/: page.tsx
musicnbrain/app/teacher/concerts/: page.tsx
musicnbrain/app/teacher/create/: page.tsx
musicnbrain/app/teacher/review/[id]/: page.tsx
musicnbrain/components/: shared.tsx
musicnbrain/lib/: mock-data.ts
musicnbrain/types/: index.ts
src/: next.config.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/student/schedule/: page.tsx
src/app/teacher/concert/[id]/: page.tsx
src/app/teacher/concert/[id]/program/: page.tsx
src/app/teacher/concerts/: page.tsx
src/app/teacher/create/: page.tsx
src/app/teacher/review/[id]/: page.tsx
src/components/: shared.tsx
src/lib/: mock-data.ts
src/types/: index.ts
